--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ ext {
     daggerVersion = '2.11'
     retrofitVersion = '2.3.0'
     moshiVersion = '1.5.0'
+    threeTenAbpVersion = '1.0.5'
     autoValueVersion = '1.5.1'
     autoValueMoshiVersion = '0.4.3'
     rxJavaVersion = '2.1.4'
