--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,8 +25,11 @@ android {
 }
 
 dependencies {
+    //noinspection GradleDependency
     implementation "com.android.support:appcompat-v7:$supportLibraryVersion"
+    //noinspection GradleDependency
     implementation "com.android.support:design:$supportLibraryVersion"
+    implementation "com.android.support:cardview-v7:$supportLibraryVersion"
 
     implementation "com.google.dagger:dagger:$daggerVersion"
     implementation "com.google.dagger:dagger-android-support:$daggerVersion"
@@ -44,8 +47,12 @@ dependencies {
     annotationProcessor "com.google.auto.value:auto-value:$autoValueVersion"
 
     implementation "com.jakewharton.threetenabp:threetenabp:$threeTenAbpVersion"
+    implementation "com.jakewharton.timber:timber:$timberVersion"
+    implementation "com.jakewharton:butterknife:$butterknifeVersion"
+    annotationProcessor "com.jakewharton:butterknife-compiler:$butterknifeVersion"
 
     implementation "io.reactivex.rxjava2:rxjava:$rxJavaVersion"
+    //noinspection GradleDependency
     implementation "io.reactivex.rxjava2:rxandroid:$rxAndroidVersion"
     implementation "com.jakewharton.rxrelay2:rxrelay:$rxRelayVersion"
 
